--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Otsukake01URP</title>
+    <title>Unity WebGL Player | Otsukake-Karamba</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -22,7 +22,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Otsukake01URP</div>
+        <div id="unity-build-title">Otsukake-Karamba</div>
       </div>
     </div>
     <script>
@@ -33,8 +33,8 @@
         frameworkUrl: buildUrl + "/otsukake_wgl.framework.js.gz",
         codeUrl: buildUrl + "/otsukake_wgl.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
-        productName: "Otsukake01URP",
+        companyName: "ail, chiba-u",
+        productName: "Otsukake-Karamba",
         productVersion: "0.1",
       };
 
