enable Decompression Fallback at the player setting.

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/otsukake_wgl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/otsukake_wgl.data.gz",
-        frameworkUrl: buildUrl + "/otsukake_wgl.framework.js.gz",
-        codeUrl: buildUrl + "/otsukake_wgl.wasm.gz",
+        dataUrl: buildUrl + "/otsukake_wgl.data.unityweb",
+        frameworkUrl: buildUrl + "/otsukake_wgl.framework.js.unityweb",
+        codeUrl: buildUrl + "/otsukake_wgl.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "ail, chiba-u",
         productName: "Otsukake-Karamba",
