update model ctrl.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Otsukake-Karamba</div>
+        <div id="unity-build-title">旧大塚家住宅｜m: WASD key, r: right-click</div>
       </div>
     </div>
     <script>
